--- a/Angular_Client/src/app/pages/components/__danh_muc/hop-dong-mau/hop-dong-mau-detail/hop-dong-mau-detail.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/hop-dong-mau/hop-dong-mau-detail/hop-dong-mau-detail.component.html
@@ -2,7 +2,7 @@
   <!-- Header Modal -->
   <div class="card-header">
     <div class="card-title">
-      <h3 class="card-label">Chi tiết Hợp đồng mẫu</h3>
+      <h3 class="card-label">Chi tiết hợp đồng mẫu</h3>
     </div>
     <div class="card-toolbar">
       <button type="button" class="btn btn-light btn-elevate mr-2" routerLink="/hop-dong/danh-muc/hop-dong-mau">Trở lại</button>
