--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-nien-khoa/quan-li-nien-khoa.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-nien-khoa/quan-li-nien-khoa.component.html
@@ -2,7 +2,7 @@
     <!-- Header Page -->
     <div class="card-header">
       <div class="card-title">
-        <h3 class="card-label">Danh sách niên khóa</h3>
+        <h3 class="card-label">DANH SÁCH NIÊN KHÓA</h3>
       </div>
       <div class="card-toolbar">
         <button type="button" class="btn btn-primary" (click) = "create()">Thêm mới</button>
