--- a/Angular_Client/src/app/pages/components/__chu_nhiem/danh-sach-hoc-sinh/danh-sach-hoc-sinh.component.html
+++ b/Angular_Client/src/app/pages/components/__chu_nhiem/danh-sach-hoc-sinh/danh-sach-hoc-sinh.component.html
@@ -2,7 +2,7 @@
   <!-- Header Page -->
   <div class="card-header">
     <div class="card-title">
-      <h3 class="card-label">DANH SÁCH LỚP</h3>
+      <h3 class="card-label">DANH SÁCH HỌC SINH</h3>
     </div>
     <div class="card-toolbar">
       <button type="button" class="btn btn-light btn-elevate mr-2">Trở về</button>
