--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh.component.html
@@ -2,7 +2,7 @@
   <!-- Header Page -->
   <div class="card-header">
     <div class="card-title">
-      <h3 class="card-label">DANH SÁCH BÀI KIỂM TRA</h3>
+      <h3 class="card-label">DANH SÁCH BÀI KIỂM TRA CẤU HÌNH</h3>
     </div>
     <div class="card-toolbar">
       <button type="button" class="btn btn-primary" routerLink="./them-moi-cau-hinh">Thêm mới</button>
